jump game 2 - graphs - greedy